Fixed NPE / bad logic when pressing enter to join game, fixed word-wrap on chat messages

--- a/client/src/static/css/litbikes.css
+++ b/client/src/static/css/litbikes.css
@@ -151,7 +151,7 @@ input:focus, textarea:focus {
     padding: 5px 10px;
 }
 
-#score  li {
+#score li {
     padding-bottom: 4px;
 }
 
@@ -186,6 +186,23 @@ input:focus, textarea:focus {
     box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
 }
 
+#chat-log {
+    width: 100%;
+    height: 150px;
+    resize: none;
+    overflow-y: scroll;
+}
+
+#chat-log ul {
+    list-style: none;
+    padding-left:5px;
+    margin-bottom:0;
+}
+
+#chat-log li {
+    word-wrap: break-word;
+}
+
 ::-webkit-scrollbar {
     width: 2px;
     height: 2px;
@@ -218,17 +235,4 @@ input:focus, textarea:focus {
 }
 ::-webkit-scrollbar-corner {
     background: transparent;
-}
-
-#chat-log {
-    width: 100%;
-    height: 150px;
-    resize: none;
-    overflow-y: scroll;
-}
-
-#chat-log ul {
-    list-style: none;
-    padding-left:5px;
-    margin-bottom:0;
 }
